# AgentTool

./: .gitignore  Cargo.toml  DESIGN.md  OPERATIONS_MANUAL.md  README.md  REFERENCE_AGENT_LEARNINGS.md  ROLE_CONTRACT.md  SYSTEM_OVERVIEW.md
dashboard/: index.html  runtime-endpoint.js
schemas/: bootstrap_ready.schema.json  task_draft.schema.json  task_round.schema.json
scripts/: Enter-AgentShell.ps1  Enter-AgentView.ps1  Launch-AgentToolAll.cmd  Launch-AgentToolAll.ps1  Launch-AgentToolDecisionLayout.cmd  Launch-AgentToolDecisionLayout.ps1  Launch-AgentToolVisibleLayout.cmd  Launch-AgentToolVisibleLayout.ps1  Start-ManagedSessionBootstrap.ps1  Stop-AgentToolAll.cmd  Stop-AgentToolAll.ps1
src/: backend.rs  config.rs  control.rs  db.rs  lib.rs  models.rs  runtime.rs
