[package]
name = "agenttool"
version = "0.1.0"
edition = "2024"

[lib]
name = "agenttool"
path = "src/lib.rs"

[[bin]]
name = "agentd"
path = "src/bin/agentd.rs"

[[bin]]
name = "agentctl"
path = "src/bin/agentctl.rs"

[[bin]]
name = "agenthost"
path = "src/bin/agenthost.rs"

[[bin]]
name = "agentwatch"
path = "src/bin/agentwatch.rs"

[dependencies]
anyhow = "1.0.100"
axum = { version = "0.8.6", features = ["ws"] }
chrono = { version = "0.4.42", features = ["clock", "serde"] }
clap = { version = "4.5.51", features = ["derive"] }
futures-util = "0.3.31"
rusqlite = { version = "0.37.0", features = ["bundled", "chrono"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tokio = { version = "1.48.0", features = ["io-util", "macros", "net", "process", "rt-multi-thread", "signal", "sync", "time"] }
tokio-tungstenite = "0.28.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter", "fmt"] }
uuid = { version = "1.18.1", features = ["serde", "v7"] }
